# serializer version: 1
# name: test_definition_version_deterministic
  '64242c1d'
# ---
# name: test_definition_version_excludes_project
  dict({
    'definition_version_a': 'a0d1182f',
    'definition_version_b': 'a0d1182f',
    'definition_versions_same': True,
    'feature_version_a': 'd26937b1',
    'feature_version_b': 'd26937b1',
    'feature_versions_same': True,
  })
# ---
# name: test_feature_version_unchanged_by_project
  '209a00a5'
# ---
# name: test_feature_with_deps_same_definition_version
  dict({
    'downstream_definition_version': '344a1dea',
    'downstream_feature_version': 'df87030d',
    'upstream_definition_version': '702a9cec',
    'upstream_feature_version': '492c1fb9',
  })
# ---
# name: test_project_in_graph_snapshot
  dict({
    'feature_keys': list([
      'feature1',
      'feature2',
    ]),
    'has_definition_version_feature1': True,
    'has_definition_version_feature2': True,
    'has_project_feature1': True,
    'has_project_feature2': True,
  })
# ---
# name: test_provenance_by_field_unchanged_across_graphs
  dict({
    'field1': '9cb9f5bd',
    'field2': '0b485f68',
  })
# ---
